ajax进度条页面完成

--- a/public/back/login.html
+++ b/public/back/login.html
@@ -46,6 +46,8 @@
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/nprogress/nprogress.js"></script>
+<script src="./js/common.js"></script>
 <script src="./js/login.js"></script>
 </body>
 </html>
