页面公共静态部分

--- a/public/back/index.html
+++ b/public/back/index.html
@@ -2,9 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>乐淘商城</title>
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+    <link rel="stylesheet" href="./css/common.css">
 </head>
-<body>
-    后台管理系统首页
+<body class="bd-color">
+<!--左侧菜单栏-->
+    <div class="lt-aside">
+        <!--标题-->
+        <div class="brand">
+            <a href="#">欢迎乐淘淘</a>
+        </div>
+        <!--头像-->
+        <div class="user">
+            <img src="images/02.jpg" alt="">
+            <p>超级管理员</p>
+        </div>
+        <!--导航-->
+        <div class="nav">
+            <ul>
+                <li><a href="user.html" class="current"><i class="glyphicon glyphicon-user"></i> <span>用户管理</span></a></li>
+                <li>
+                    <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i> <span>分类管理</span></a>
+                    <div class="child" style="display: none" >
+                        <a href="first.html">一级分类</a>
+                        <a href="second.html">二级分类</a>
+                    </div>
+                </li>
+                <li><a href="product.html"><i class="glyphicon glyphicon-tags"></i> <span>商品管理</span></a></li>
+            </ul>
+        </div>
+    </div>
+
+<!--右侧主体部分-->
+    <div class="lt-main">
+        <!--头部导航栏-->
+        <div class="lt-topbar">
+            <a href="#" class="pull-left icon_menu">
+                <i class="glyphicon glyphicon-align-justify"></i>
+            </a>
+            <a href="#" class="pull-right icon_logout">
+                <i class="glyphicon glyphicon-log-out"></i>
+            </a>
+        </div>
+        <!--下面内容-->
+        <div class="container-fluid mt-20" style="padding-left: 15px; padding-right: 15px">
+            <ol class="breadcrumb">
+                <li><a href="index.html">系统管理</a></li>
+                <li class="active">用户管理</li>
+            </ol>
+        </div>
+    </div>
+
+<script src="./lib/jquery/jquery.min.js"></script>
+<script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/nprogress/nprogress.js"></script>
+<script src="./js/common.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
