首页功能完成

--- a/public/back/index.html
+++ b/public/back/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css">
+
 </head>
 <body class="bd-color">
 <!--左侧菜单栏-->
@@ -54,7 +56,11 @@
                 <li class="active">首页</li>
             </ol>
         </div>
-
+        <!--echart图表-->
+        <div class="lt-content">
+            <div class="echarts_1 pull-left"></div>
+            <div class="echarts_2 pull-right"></div>
+        </div>
     </div>
 
 <!-- role  aria- 都是给盲人设备识别的, 可以直接删掉 -->
@@ -85,6 +91,7 @@
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./js/common.js"></script>
+<script src="./lib/echarts/echarts.min.js"></script>
 <script src="./js/index.js"></script>
 </body>
 </html>
