一级分类功能完成

--- a/public/back/first.html
+++ b/public/back/first.html
@@ -52,8 +52,28 @@
         <ol class="breadcrumb">
             <li><a href="index.html">系统管理</a></li>
             <li class="active">分类管理</li>
-            <li class="active">以及分类</li>
+            <li class="active">一级分类</li>
         </ol>
+            <!--一级分类内容-->
+        <div class="lt-content">
+            <button class="btn btn-default mb-20" id="addBtn">添加分类</button>
+            <table class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th width="20%">序号</th>
+                        <th width="80%">一级分类名</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!--挖个坑-->
+                </tbody>
+            </table>
+            <div class="text-right">
+                <ul id="paginator"></ul>
+            </div>
+
+        </div>
+
     </div>
 </div>
 
@@ -80,11 +100,45 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<!--添加一级分类模态框-->
+<div class="modal fade" tabindex="-1" id="addModal">
+    <div class="modal-dialog modal-sm" >
+        <div class="modal-content">
+            <form id="form">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
+                    <h4 class="modal-title">添加分类</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="categoryName" id="categoryName" placeholder="请输入一级分类">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary btn btn-primary" id="firstBtn">添加</button>
+                </div>
+            </form>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
+
+<script type="text/html" id="cateTpl">
+    {{each rows v i}}
+    <tr>
+        <td>{{i+1 + (page-1)*size}}</td>
+        <td>{{v.categoryName}}</td>
+    </tr>
+    {{/each}}
+</script>
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/first.js"></script>
 
 </body>
 </html>
