--- a/public/back/user.html
+++ b/public/back/user.html
@@ -128,7 +128,7 @@
   3. 准备数据
   4. 将数据和模板相结合
 -->
-<script type="text/hmtl" id="tpl">
+<script type="text/html" id="tpl">
 {{ each rows v i }}
      <tr>
         <td>{{i + 1 + (page-1) * size }}</td>
