--- a/public/back/second.html
+++ b/public/back/second.html
@@ -26,8 +26,8 @@
             <li><a href="user.html"><i class="glyphicon glyphicon-user"></i> <span>用户管理</span></a></li>
             <li>
                 <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i> <span>分类管理</span></a>
-                <div class="child">
-                    <a href="first.html">一级分类</a>
+                <div class="child" >
+                    <a href="first.html" >一级分类</a>
                     <a href="second.html" class="current">二级分类</a>
                 </div>
             </li>
@@ -54,6 +54,28 @@
             <li class="active">分类管理</li>
             <li class="active">二级分类</li>
         </ol>
+        <!--一级分类内容-->
+        <div class="lt-content">
+            <button class="btn btn-default mb-20" id="addBtn">添加分类</button>
+            <table class="table table-bordered table-hover">
+                <thead>
+                <tr>
+                    <th width="10%">序号</th>
+                    <th width="30%">一级分类名</th>
+                    <th width="30%">二级分类名</th>
+                    <th width="30%">一级分类LOGO</th>
+                </tr>
+                </thead>
+                <tbody>
+                <!--挖个坑-->
+                </tbody>
+            </table>
+            <div class="text-right">
+                <ul id="paginator"></ul>
+            </div>
+
+        </div>
+
     </div>
 </div>
 
@@ -80,11 +102,79 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<!--添加分类模态框-->
+<div class="modal fade" tabindex="-1" id="addModal">
+    <div class="modal-dialog modal-sm" >
+        <div class="modal-content">
+            <form id="form">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
+                    <h4 class="modal-title">添加分类</h4>
+                </div>
+                <div class="modal-body">
+                    <!--一级分类下拉菜单-->
+                    <div class="form-group">
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" >
+                                <span id="dropdownText">请选择一级分类</span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                               <!--挖个坑-->
+                            </ul>
+                        </div>
+                        <input type="hidden" name="categoryId">
+                        <input type="hidden" name="hot" value="1">
+                    </div>
+                    <!--二级分类-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="brandName" id="brandName" placeholder="请输入二级分类">
+                    </div>
+                    <!--图片上传-->
+                    <div class="form-group">
+                        <label class="btn btn-default" for="fileupload">上传图片</label>
+                        <input id="fileupload" type="file" name="pic1" style="display: none" data-url="/category/addSecondCategoryPic">
+                    </div>
+                    <!--图片预览-->
+                    <div class="form-group" id="img-box">
+                        <img src="./images/none.png" width="100px" alt="">
+                        <input type="hidden" name="brandLogo">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary btn btn-primary" id="firstBtn">添加</button>
+                </div>
+            </form>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
+
+<script type="text/html" id="cateTpl">
+    {{each rows v i}}
+        <tr>
+            <td>{{i+1 + (page-1)*size}}</td>
+            <td>{{v.categoryName}}</td>
+            <td>{{v.brandName}}</td>
+            <td><img src="{{v.brandLogo}}" height="50"></td>
+        </tr>
+    {{/each}}
+</script>
+<script type="text/html" id="dropdownTpl">
+    {{each rows v i}}
+       <li><a href="#" data-id="{{v.id}}">{{v.categoryName}}</a></li>
+    {{/each}}
+</script>
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+<script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/second.js"></script>
 
 </body>
 </html>
