--- a/public/back/product.html
+++ b/public/back/product.html
@@ -26,10 +26,11 @@
             <li><a href="user.html"><i class="glyphicon glyphicon-user"></i> <span>用户管理</span></a></li>
             <li>
                 <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i> <span>分类管理</span></a>
-                <div class="child" style="display: none" >
+                <div class="child" >
                     <a href="first.html" >一级分类</a>
-                    <a href="second.html">二级分类</a>
-                </div</li>
+                    <a href="second.html" >二级分类</a>
+                </div>
+            </li>
             <li><a href="product.html" class="current"><i class="glyphicon glyphicon-tags"></i> <span>商品管理</span></a></li>
         </ul>
     </div>
@@ -51,7 +52,34 @@
         <ol class="breadcrumb">
             <li><a href="index.html">系统管理</a></li>
             <li class="active">商品管理</li>
+
         </ol>
+        <!--一级分类内容-->
+        <div class="lt-content">
+            <button class="btn btn-default mb-20" id="addBtn">添加商品</button>
+            <table class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th width="10%">序号</th>
+                        <th width="20%">商品名称</th>
+                        <th width="30%">商品描述</th>
+                        <th width="10%">商品库存</th>
+                        <th width="10%">商品尺寸</th>
+                        <th width="10%">商品状态</th>
+                        <th width="10%">操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                <!--挖个坑-->
+
+                </tbody>
+            </table>
+            <div class="text-right">
+                <ul id="paginator"></ul>
+            </div>
+
+        </div>
+
     </div>
 </div>
 
@@ -78,11 +106,112 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<!--添加分类模态框-->
+<div class="modal fade" tabindex="-1" id="addModal">
+    <div class="modal-dialog" >
+        <div class="modal-content">
+            <form id="form">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
+                    <h4 class="modal-title">添加商品</h4>
+                </div>
+                <div class="modal-body">
+                    <!--一级分类下拉菜单-->
+                    <div class="form-group">
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" >
+                                <span id="dropdownText">请选择二级分类</span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <!--挖个坑-->
+                            </ul>
+                        </div>
+                        <input type="hidden" name="brandId">
+                        <input type="hidden" name="statu" value="1">
+                    </div>
+                    <!--商品名称-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="proName"  placeholder="请输入商品名称">
+                    </div>
+                    <!--商品描述-->
+                    <div class="form-group">
+                        <textarea name="proDesc" cols="30" rows="5" class="form-control" placeholder="请输入商品描述"></textarea>
+                        <!--<input type="text" class="form-control" name="brandName" id="proDesc" placeholder="请输入商品描述">-->
+                    </div>
+                    <!--商品库存-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="num"  placeholder="请输入商品库存">
+                    </div>
+                    <!--商品尺码-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="size"  placeholder="请输入商品尺码">
+                    </div>
+                    <!--商品原价-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="oldPrice"  placeholder="请输入商品原价">
+                    </div>
+                    <!--商品现价-->
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="price" placeholder="请输入商品现价">
+                    </div>
+                    <!--图片上传-->
+                    <div class="form-group">
+                        <label class="btn btn-default" for="fileupload">上传图片</label>
+                        <input id="fileupload" type="file" name="pic1" style="display: none" data-url="/product/addProductPic" multiple>
+                    </div>
+                    <!--图片预览-->
+                    <div class="form-group" id="img-box">
+                        <!--<img src="./images/none.png" width="100px" alt="">-->
+                        <!--<img src="./images/none.png" width="100px" alt="">-->
+                        <!--<img src="./images/none.png" width="100px" alt="">-->
+                        <!--用于标记图片上传的状态-->
+                        <input type="hidden" name="picStatus">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary btn btn-primary" id="addProdBtn">添加</button>
+                </div>
+            </form>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
+
+<script type="text/html" id="productTpl">
+    {{each rows v i}}
+        <tr>
+            <td>{{i+1 + (page-1)*size}}</td>
+            <td>{{v.proName}}</td>
+            <td>{{v.proDesc}}</td>
+            <td>{{v.num}}</td>
+            <td>{{v.size}}</td>
+            <td>{{v.statu === 1 ? "已上架":"已下架"}}</td>
+            <td>
+                {{if(v.staru === 1)}}
+                <button class="btn btn-primary">上架</button>
+                {{else}}
+                <button class="btn btn-danger">下架</button>
+                {{/if}}
+            </td>
+        </tr>
+    {{/each}}
+</script>
+<script type="text/html" id="dropdownTpl">
+    {{each rows v i}}
+    <li><a href="#" data-id="{{v.id}}">{{v.brandName}}</a></li>
+    {{/each}}
+</script>
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+<script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
 <script src="./js/common.js"></script>
+<script src="./js/product.js"></script>
 
 </body>
 </html>
