商品详情静态页展示

--- a/public/front/searchList.html
+++ b/public/front/searchList.html
@@ -81,7 +81,7 @@
 </div>
 
 <script type="text/html" id="productTpl">
-    <ul>
+    <ul class="mui-clearfix">
     {{each data v i}}
         <li class="lt_product_item">
             <a href="product.html?productId={{ v.id }}" data-id="{{v.id}}">
