--- a/public/front/product.html
+++ b/public/front/product.html
@@ -28,73 +28,8 @@
         <div class="mui-scroll-wrapper">
             <div class="mui-scroll">
                 <!--这里放置真实显示的DOM内容-->
-                <!--轮播图-->
-                <div class="mui-slider">
-                    <!--图片区域-->
-                    <div class="mui-slider-group mui-slider-loop">
-                        <!--支持循环，需要重复图片节点-->
-                        <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner6.png" /></a></div>
-                        <div class="mui-slider-item"><a href="#"><img src="./images/banner1.png" /></a></div>
-                        <div class="mui-slider-item"><a href="#"><img src="./images/banner2.png" /></a></div>
-                        <div class="mui-slider-item"><a href="#"><img src="./images/banner3.png" /></a></div>
-                        <div class="mui-slider-item"><a href="#"><img src="./images/banner4.png" /></a></div>
-                        <div class="mui-slider-item"><a href="#"><img src="./images/banner5.png" /></a></div>
-                        <div class="mui-slider-item"><a href="#"><img src="./images/banner6.png" /></a></div>
-                        <!--支持循环，需要重复图片节点-->
-                        <div class="mui-slider-item mui-slider-item-duplicate"><a href="#"><img src="./images/banner1.png" /></a></div>
-                    </div>
-                    <!-- 小圆点结构 -->
-                    <div class="mui-slider-indicator">
-                        <div class="mui-indicator"></div>
-                        <div class="mui-indicator"></div>
-                        <div class="mui-indicator"></div>
-                        <div class="mui-indicator"></div>
-                        <div class="mui-indicator"></div>
-                        <div class="mui-indicator"></div>
-                    </div>
-                </div>
-                <!--产品标题-->
-                <div class="lt-pro-name item-box">
-                    <strong>李宁闪击篮球鞋驭帅10镭射队尚4男韦德之道空袭中高帮队尚3.5球鞋</strong>
-                </div>
-                <!--产品价格-->
-                <div class="lt-price item-box">
-                    价格:
-                    <span class="price">¥499.2</span>
-                    <span class="oldPrice">¥488.2</span>
-                </div>
-                <!--产品尺码-->
-                <div class="lt-size item-box">
-                    尺码:
-                    <span>38</span>
-                    <span>39</span>
-                    <span>40</span>
-                    <span>41</span>
-                    <span>42</span>
-                    <span>43</span>
-                    <span>44</span>
-                    <span>45</span>
-                    <span>46</span>
-                    <span>47</span>
-                    <span>48</span>
-                    <span>49</span>
-                </div>
-                <!--产品数量-->
-                <div class="lt-num item-box">
-                    数量:
-                    <div class="mui-numbox" data-numbox-step='1' data-numbox-min='1' data-numbox-max='100'>
-                        <!-- "-"按钮，点击可减小当前数值 -->
-                        <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                        <input class="mui-numbox-input" type="number" />
-                        <!-- "+"按钮，点击可增大当前数值 -->
-                        <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
-                    </div>
-                    <span>剩余数量: 20双 </span>
-                </div>
-                <!--产品描述-->
-                <div class="lt-price item-box">
-                    详情:描述
-                </div>
+                <!--挖个大坑-->
+
             </div>
         </div>
     </div>
@@ -107,7 +42,81 @@
         </div>
     </div>
 </div>
+<!--
+  标准语法  {{ }}
+  原生语法  <% %>原生语法中可以写js代码
 
+  原始语法输出 <%= %>
+
+  官网地址:
+  https://aui.github.io/art-template/
+-->
+<script type="text/html" id="productTpl">
+    <!--轮播图-->
+    <div class="mui-slider">
+        <!--图片区域-->
+        <div class="mui-slider-group mui-slider-loop">
+            <!--支持循环，需要重复图片节点-->
+            <div class="mui-slider-item mui-slider-item-duplicate">
+                <!-- 准备假图片, 最后一张 pic[pic.length-1] -->
+                <a href="#"><img src="{{ pic[pic.length-1].picAddr }}" /></a>
+            </div>
+            {{each pic v i}}
+                 <div class="mui-slider-item"><a href="#"><img src="{{ v.picAddr }}" /></a></div>
+            {{/each}}
+            <!--支持循环，需要重复图片节点-->
+            <!-- 准备假图, 第一张 -->
+            <div class="mui-slider-item mui-slider-item-duplicate">
+                <a href="#"><img src="{{ pic[0].picAddr }}" /></a>
+            </div>
+        </div>
+        <!-- 小圆点结构 -->
+        <div class="mui-slider-indicator">
+            {{each pic v i}}
+                <div class="mui-indicator {{i === 0 ? 'mui-active' : ''}}"></div>
+            {{/each}}
+        </div>
+    </div>
+    <!--产品标题-->
+    <div class="lt-pro-name item-box">
+        <strong>{{ proName }}</strong>
+    </div>
+    <!--产品价格-->
+    <div class="lt-price item-box">
+        价格:
+        <span class="price">¥{{price}}</span>
+        <span class="oldPrice">¥{{oldPrice}}</span>
+    </div>
+    <!--产品尺码-->
+    <div class="lt-size item-box">
+        尺码:
+        <%
+        var arr = size.split("-");//['40','50']
+        var start = arr[0];
+        var end = arr[1];
+        for(var i = start; i<=end; i++){
+        %>
+        <span>{{i}}</span>
+        <%}%>
+    </div>
+    <!--产品数量-->
+    <div class="lt-num item-box">
+        数量:
+        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='1' data-numbox-max='{{num}}'>
+            <!-- "-"按钮，点击可减小当前数值 -->
+            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
+            <input class="mui-numbox-input" type="number" />
+            <!-- "+"按钮，点击可增大当前数值 -->
+            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
+        </div>
+        <span>剩余数量: {{num}}双 </span>
+    </div>
+    <!--产品描述-->
+    <div class="lt-price item-box">
+        详情: {{ proDesc }}
+    </div>
+
+</script>
 <script src="./lib/mui/js/mui.js"></script>
 <script src="./lib/zepto/zepto.min.js"></script>
 <script src="./lib/artTemplate/template-web.js"></script>
