购物车编辑功能和删除功能完成

--- a/public/front/login.html
+++ b/public/front/login.html
@@ -61,7 +61,7 @@
                 </a>
             </li>
             <li>
-                <a href="cart.html" class="current">
+                <a href="cart.html" >
                     <i class="fa fa-shopping-cart"></i>
                     <p>购物车</p>
                 </a>
