--- a/public/front/cart.html
+++ b/public/front/cart.html
@@ -28,7 +28,10 @@
         <div class="mui-scroll-wrapper">
             <div class="mui-scroll">
                 <!--这里放置真实显示的DOM内容-->
+                <ul class="mui-table-view">
 
+                    <!--挖个坑-->
+                </ul>
             </div>
         </div>
     </div>
@@ -64,7 +67,71 @@
 </div>
 
 <script type="text/html" id="cartTpl">
+    {{each arr v i}}
+        <li class="mui-table-view-cell mui-transitioning  cart-item">
+            <div class="mui-slider-right mui-disabled">
+                <a class="mui-btn mui-btn-primary mui-icon mui-icon-compose btn-edit"
+                   data-id="{{v.id}}"
+                   data-size="{{v.size}}"
+                   data-num="{{v.num}}"
+                   data-productNum="{{ v.productNum }}"
+                   data-productSize="{{ v.productSize }}">
+                </a>
+                <a class="mui-btn mui-btn-danger mui-icon mui-icon-trash btn-delete" data-id="{{v.id}}"></a>
+            </div>
+            <!--左侧的内容-->
+            <div class="mui-slider-handle" style="transform: translate(0px, 0px);">
+                <div class="mui-table-cell">
+                    <!--左侧图片-->
+                    <div class="cart-img">
+                        <img src="{{v.pic[0].picAddr}}" alt="">
+                        <input type="checkbox" >
+                    </div>
+                    <!--右侧内容-->
+                    <div class="cart-info">
+                        <p class="pro-name">
+                            {{v.proName}}
+                        </p>
+                        <p>
+                            <span class="price">¥{{v.price}}</span>
+                            <span class="oldPrice">¥{{v.oldPrice}}</span>
+                            <span class="mui-pull-right">{{v.num}}双</span>
+                        </p>
+                        <p>鞋码:{{v.size}}</p>
+                    </div>
+                </div>
+            </div>
+        </li>
+    {{/each}}
+</script>
 
+<!--编辑框中显示的尺码数量等信息-->
+<script type="text/html" id="editTpl">
+    <!--尺码-->
+    <div class="lt-size">
+        尺码:
+      <%
+        var arr = productsize.split("-");//['32','40']
+        var start = arr[0];
+        var end = arr[1];
+        for(var i = start; i<=end; i++){
+        %>
+        <!-- 加减之后 i 是数字, size 是字符串, 这里用 == -->
+        <span class="{{i==size?'current':''}}">{{i}}</span>
+        <%
+        }
+        %>
+        <!--<span>40</span>-->
+    </div>
+    <!--数量-->
+    <div class="lt-num">
+        数量:
+        <div class="mui-numbox" data-numbox-step='1' data-numbox-min='1' data-numbox-max='{{ productnum }}'>
+            <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
+            <input class="mui-numbox-input" type="number" value="{{ num }}" />
+            <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
+        </div>
+    </div>
 </script>
 
 <script src="./lib/mui/js/mui.js"></script>
